# bd-proyecto-1

./: CMakeLists.txt  README.md
interfaz/proyecto/: package-lock.json  package.json
interfaz/proyecto/src/: App.jsx  api.js  index.css  main.jsx
interfaz/proyecto/src/components/: AVLList.jsx  Main.jsx  QueryEditor.jsx  Resultstable.jsx  Sidebar.jsx
parser/: parserSQL.cpp  parserSQL.h  pruebatoken.cpp  tokensSQL.cpp  tokensSQL.h
tecnicas/: universal.cpp
tecnicas/AVL/: AVL.cpp  AVL.h  Record.h  main.cpp
tecnicas/ExtendibleHashing/: main.cpp
tecnicas/ISAM/: classes.cpp  data.csv  data.txt  index.txt  isam.cpp  main  main.cpp  record.h
tecnicas/data/: data.csv
